--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="500dp"
         android:minHeight="48dp"
-        android:text="Convert"
+        android:background="@color/spotifyGreen"
+        android:text="CONVERT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/numInput"
